test/parameterSubtyping2.slq
def fooâ‚(x:ğ”¹)â‡’x;
def fooâ‚‚(const x:ğ”¹)â‡’x;
def fooâ‚ƒ(moved x:ğ”¹)â‡’x;

def barâ‚(foo: ğ”¹ !â†’ ğ”¹){}
def barâ‚‚(foo: const ğ”¹ !â†’ ğ”¹){}
def barâ‚ƒ(foo: moved ğ”¹ !â†’ ğ”¹){}

def main(): const ğ”¹ !â†’ ğ”¹{
	barâ‚(fooâ‚);
	barâ‚(fooâ‚‚); /// error
	barâ‚(fooâ‚ƒ);
	barâ‚‚(fooâ‚); /// error
	barâ‚‚(fooâ‚‚);
	barâ‚‚(fooâ‚ƒ); /// error
	barâ‚ƒ(fooâ‚);
	barâ‚ƒ(fooâ‚‚); /// error
	barâ‚ƒ(fooâ‚ƒ);
	if measure(H(0:ğ”¹)){
		return fooâ‚; /// error
	}else if measure(H(0:ğ”¹)){
		return fooâ‚‚;
	}else{
		return fooâ‚ƒ; /// error
	}
}
